Deleted unnecessary deferring of JS load

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Overpass:400,700">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <script src='submit.js' defer></script>
+  <script src='submit.js'></script>
   <title>Frontend Mentor | Interactive rating component</title>
 </head>
 <body>
